# VeryBegin

./: .gitignore  .gitmodules
3D/DirectX/DX11/: dx11_demos.sln
3D/DirectX/DX9/: DX9.sln  dx9_demos.sln  dx9_samples.sln
3D/DirectX/DX9/DX9/: DX9.vcxproj
3D/DoPBRT/: DoPBRT.sln
3D/DoPBRT/DoPBRT/: DoPBRT.vcxproj  DoPBRT.vcxproj.filters
3D/DoPBRT/DoPBRT/core/: api.h  camera.h  diffgeom.cpp  diffgeom.h  film.h  geometry.h  integrator.cpp  integrator.h  memory.h  parallel.cpp  parallel.h  parser.h  pbrt.h  (+12 more)
3D/OpenGL/: ogl_samples.sln
3D/TinyRay/: TinyRay.sln
3D/TinyRay/TinyRay/: TinyRay.vcxproj  TinyRay.vcxproj.filters
3D/ZRay/: ZRay.sln
3D/ZRay/ZRay/: ZRay.vcxproj  ZRay.vcxproj.filters  main.cpp
C++/Expr/: expr.cpp  expr.h  main.cpp
C++/PuyoPuyo/: bitmap.cpp  bitmap.h  common.h  device.cpp  device.h  main.cpp  puyo_puyo.vcxproj  puyopuyo.cpp  puyopuyo.h  puyopuyogame.cpp  puyopuyogame.h
C++/Reflection/: Ref.h  Reflection.cpp  Reflection.h  Reflection.sln  Reflection.vcxproj  Reflection.vcxproj.filters  Type.cpp  Type.h  TypeRegistry.cpp  TypeRegistry.h  main.cpp
C++/Threads/: Threads.sln
C++/Threads/01_CreateThread/: 01_CreateThread.vcxproj  01_CreateThread.vcxproj.filters  main.cpp  thread_create_win.h
Lua/LuaLib/: CMakeLists.txt
Lua/LuaLib/lib/: Lua.lib
Lua/TestCases/: TestCases.sln
Lua/TestCases/TestCases/: TestCases.vcxproj  TestCases.vcxproj.filters  luac.h  luac_00.cpp  luac_01.cpp  luac_02.cpp  luac_gc.cpp  main.cpp
Python/: clean_layouts.py  sync_svn_p4.py
Sql/mysql_dump/: DumpSql.cpp  DumpSql.h  common.h  main.cpp  op.txt
(+281 files in other folders)
